--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
     <title>CodeFellowship Home</title>
 </head>
 <body>
-
+<form action="/signup" method="POST">
+    <p>User name <input type="username" name="username"></p>
+    <p>Password  <input type="password" name="password"></p>
+    <input type="submit">
+</form>
 </body>
 </html>
