--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-<form action="/login" method="POST">
+<form action="/signup" method="POST">
 
     <p>Name                   <input type="text" name="username"></p>
     <p>Password               <input type="password" name="password"></p>
@@ -19,11 +19,3 @@
 </form>
 </body>
 </html>
-
-
-
-private String firstName;
-private String lastName;
-private Date dateOfBirth;
-private String bio;
-private Image profilePicture;
