--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CodeFellowship Home</title>
+    <title>Home</title>
 </head>
 <body>
-<form action="/signup" method="POST">
-    <p>User name <input type="username" name="username"></p>
-    <p>Password  <input type="password" name="password"></p>
-    <input type="submit">
-</form>
+<h1>Home</h1>
+<h2>Welcome back, [[${userName}]]</h2>
+<a href="/signup">Sign Up</a>
+<a href="/login">Log In</a>
 </body>
 </html>
