--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,7 @@
 <body>
 <form action="/signup" method="POST">
 
-    <p>Name                   <input type="text" name="username"></p>
+    <p>Name                   <input type="text" name="userName"></p>
     <p>Password               <input type="password" name="password"></p>
     <p>First Name             <input type="text" name="firstName"></p>
     <p>Last Name              <input type="text" name="lastName"></p>
