--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CodeFellowship Home</title>
-</head>
-<body>
-<form action="/login" method="POST">
-    <p>User name <input type="username" name="username"></p>
-    <p>Password  <input type="password" name="password"></p>
-    <input type="submit">
-</form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>CodeFellowship Login</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <header>
+        <h2 class="CurrentLoggedInUserName">User: [[${userName}]]</h2>
+        <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
+    </header>
+    <body>
+        <form action="/login" method="POST">
+            <p>User name <input type="username" name="username"></p>
+            <p>Password  <input type="password" name="password"></p>
+            <input type="submit">
+        </form>
+    </body>
 </html>
