--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,20 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Sign Up</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<header>
+    <h2 class="CurrentLoggedInUserName">User: [[${userName}]]</h2>
+    <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
+</header>
 <body>
-<form action="/signup" method="POST">
+    <form action="/signup" method="POST">
 
-    <p>Name                   <input type="text" name="userName"></p>
-    <p>Password               <input type="password" name="password"></p>
-    <p>First Name             <input type="text" name="firstName"></p>
-    <p>Last Name              <input type="text" name="lastName"></p>
-    <p>Date of Birth          <input type="date" name="dateOfBirth"></p>
-    <p>Biography              <input type="text" name="bio"></p>
-    <p>Profile Picture (URL)  <input type="url" name="profilePicture"></p>
+        <p>Name                   <input type="text" name="userName"></p>
+        <p>Password               <input type="password" name="password"></p>
+        <p>First Name             <input type="text" name="firstName"></p>
+        <p>Last Name              <input type="text" name="lastName"></p>
+        <p>Date of Birth          <input type="date" name="dateOfBirth"></p>
+        <p>Biography              <input type="text" name="bio"></p>
+        <p>Profile Picture (URL)  <input type="url" name="profilePicture"></p>
 
-    <input type="submit">
-</form>
+        <input type="submit">
+    </form>
 </body>
 </html>
