--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,15 +5,18 @@
         <title>CodeFellowship Home</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    <body>
     <header>
         <h2 class="CurrentLoggedInUserName">User: [[${userName}]]</h2>
         <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
-    </header>
-    <body>
-        <h1>CodeFellowship - A Place For Friends</h1>
         <nav>
+            <h1>CodeFellowship - A Place For Friends</h1>
+            <li><a href="/">Home</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/login">Log In</a></li>
+            <li><a href="/userProfile">My Profile</a></li>
         </nav>
+    </header>
+
     </body>
 </html>
