--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,13 @@
             <h2 class="CurrentLoggedInUserName">User: [[${userName}]]</h2>
             <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
         </header>
+        <nav>
+            <h1>CodeFellowship - A Place For Friends</h1>
+            <li><a href="/">Home</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/login">Log In</a></li>
+            <li><a href="/userProfile">My Profile</a></li>
+        </nav>
         <form action="/login" method="POST">
             <p>User name <input type="username" name="username"></p>
             <p>Password  <input type="password" name="password"></p>
