--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -13,17 +13,25 @@
         <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
     </header>
 
-    <form action="/signup" method="POST">
+    <main>
+        <h1>CodeFellowship - A Place For Friends</h1>
+        <nav>
+            <li><a href="/">Home</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/login">Log In</a></li>
+            <li><a href="/userProfile">My Profile</a></li>
+        </nav>
 
-        <p>Name                   <input type="text" name="userName"></p>
-        <p>Password               <input type="password" name="password"></p>
-        <p>First Name             <input type="text" name="firstName"></p>
-        <p>Last Name              <input type="text" name="lastName"></p>
-        <p>Date of Birth          <input type="date" name="dateOfBirth"></p>
-        <p>Biography              <input type="text" name="bio"></p>
-        <p>Profile Picture (URL)  <input type="url" name="profilePicture"></p>
-
-        <input type="submit">
-    </form>
+        <form action="/signup" method="POST">
+            <p>Name                   <input type="text" name="userName"></p>
+            <p>Password               <input type="password" name="password"></p>
+            <p>First Name             <input type="text" name="firstName"></p>
+            <p>Last Name              <input type="text" name="lastName"></p>
+            <p>Date of Birth          <input type="date" name="dateOfBirth"></p>
+            <p>Biography              <input type="text" name="bio"></p>
+            <p>Profile Picture (URL)  <input type="url" name="profilePicture"></p>
+            <input type="submit">
+        </form>
+    </main>
 </body>
 </html>
