--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -19,6 +19,7 @@
                 <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/userProfile">My Profile</a></li>
+                <li><a href="/feed">My Feed</a></li>
             </nav>
 
             <p>First Name: [[${user.firstName}]]</p>
