--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,7 @@
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/login">Log In</a></li>
             <li><a href="/userProfile">My Profile</a></li>
+            <li><a href="/feed">My Feed</a></li>
         </nav>
         <form action="/login" method="POST">
             <p>User name <input type="username" name="username"></p>
