--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -20,6 +20,7 @@
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/login">Log In</a></li>
             <li><a href="/userProfile">My Profile</a></li>
+            <li><a href="/feed">My Feed</a></li>
         </nav>
 
         <form action="/signup" method="POST">
