--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,18 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-    <header>
-        <h2 class="CurrentLoggedInUserName">User: [[${userName}]]</h2>
-        <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
-        <nav>
-            <h1>CodeFellowship - A Place For Friends</h1>
-            <li><a href="/">Home</a></li>
-            <li><a href="/signup">Sign Up</a></li>
-            <li><a href="/login">Log In</a></li>
-            <li><a href="/userProfile">My Profile</a></li>
-            <li><a href="/feed">My Feed</a></li>
-        </nav>
-    </header>
+    <header th:insert="fragments/header.html :: header"></header>
 
     <main>
     <h2>Make a new friend</h2>
