--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,22 +7,8 @@
 </head>
 
 <body>
-
-    <header>
-        <h2 class="CurrentLoggedInUserName">User: [[${userName}]]</h2>
-        <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
-    </header>
-
+    <header th:insert="fragments/header.html :: header"></header>
     <main>
-        <h1>CodeFellowship - A Place For Friends</h1>
-        <nav>
-            <li><a href="/">Home</a></li>
-            <li><a href="/signup">Sign Up</a></li>
-            <li><a href="/login">Log In</a></li>
-            <li><a href="/userProfile">My Profile</a></li>
-            <li><a href="/feed">My Feed</a></li>
-        </nav>
-
         <form action="/signup" method="POST">
             <p>Name                   <input type="text" name="userName"></p>
             <p>Password               <input type="password" name="password"></p>
