--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -7,25 +7,10 @@
 </head>
 
     <body>
-        <header>
-            <h2 class="CurrentLoggedInUserName">User: [[${user.username}]]</h2>
-            <a href="/logout" class="CurrentLoggedInUserName">Log out</a>
-        </header>
+    <header th:insert="fragments/header.html :: header"></header>
 
         <main>
-            <h1>CodeFellowship - A Place For Friends</h1>
-            <nav>
-                <li><a href="/">Home</a></li>
-                <li><a href="/signup">Sign Up</a></li>
-                <li><a href="/login">Log In</a></li>
-                <li><a href="/userProfile">My Profile</a></li>
-                <li><a href="/feed">My Feed</a></li>
-            </nav>
-
-            <p>First Name: [[${user.firstName}]]</p>
-            <p>Last Name:  [[${user.lastName}]]</p>
-            <p>Birthday:   [[${user.dateOfBirth}]]</p>
-            <p>Bio:        [[${user.bio}]]</p>
+            <div th:insert="fragments/userBasicDetails.html:: basicUserDetails"></div>
 
             <img th:src="${user.profilePicture}">
 
